--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@graphcms/rich-text-react-renderer": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
     "html-react-parser": "^1.4.8",
@@ -17,6 +19,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@graphcms/rich-text-types": "^0.3.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
