--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "@graphcms/rich-text-react-renderer": "^0.4.2",
     "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.3.0",
